--- a/Projeto/frontend/tsconfig.app.json
+++ b/Projeto/frontend/tsconfig.app.json
@@ -15,6 +15,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Permitir importações de CSS e imagens */
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowJs": true,
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
