--- a/Projeto/frontend/package.json
+++ b/Projeto/frontend/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "recharts": "^2.15.1"
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
