--- a/Projeto/docker-compose.yml
+++ b/Projeto/docker-compose.yml
@@ -1,33 +1,42 @@
+version: "3.8"
+
 services:
   mysql:
-    image: mysql:8.0.42
+    image: mysql:8.0
     container_name: mysql-container
     environment:
-      MYSQL_ROOT_PASSWORD: sua_senha_forte_aqui # **Mude esta senha!**
+      MYSQL_ROOT_PASSWORD: 123456
       MYSQL_DATABASE: aluga_ai_ze
-      MYSQL_USER: gustavo
-      MYSQL_PASSWORD: senha_do_gustavo
+      MYSQL_USER: root
+      MYSQL_PASSWORD: 123456
     ports:
       - "3306:3306"
+    volumes:
+      - mysql-data:/var/lib/mysql
     networks:
       - app-network
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx-container
+    ports:
+      - "8080:80"
     volumes:
-      - mysql-data:/var/lib/mysql # CORRIGIDO: Nome do volume consistente
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - mysql
+    networks:
+      - app-network
 
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: backend-container
-    expose: # Usa expose pois o Nginx fará o proxy
+    expose:
       - "3000"
-    environment: # É fundamental que seu backend use essas variáveis para conectar ao DB
-      DB_HOST: mysql # Nome do serviço MySQL
-      DB_NAME: aluga_ai_ze
-      DB_USER: gustavo
-      DB_PASSWORD: senha_do_gustavo
     depends_on:
-      - mysql # Backend depende do MySQL
+      - mysql
     networks:
       - app-network
 
@@ -36,30 +45,16 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: frontend-container
-    expose: # Usa expose pois o Nginx fará o proxy
+    expose:
       - "3000"
-    # O frontend não depende do MySQL diretamente.
-    # Ele deve consumir a API do backend, então a dependência é do backend.
     depends_on:
+      - mysql
       - backend
     networks:
       - app-network
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx-container
-    ports:
-      - "80:80" # ALTERADO: Normalmente Nginx escuta na porta 80. Se quiser 8080, mantenha "8080:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - backend # Nginx precisa que o backend esteja rodando
-      - frontend # Nginx precisa que o frontend esteja rodando
-    networks:
-      - app-network
-
 volumes:
-  mysql-data: # CORRIGIDO: Nome do volume consistente com o serviço MySQL
+  mysql-data:
 
 networks:
   app-network:
