--- a/Projeto/backend/tsconfig.json
+++ b/Projeto/backend/tsconfig.json
@@ -110,5 +110,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true              ,
     "jsx": "react-jsx"                   /* Skip type checking all .d.ts files. */
-  }
+  },
+  "exclude": ["tests", "node_modules"]
 }
